<resources>
    <string name="app_name">Travell App</string>
    <string name="app_moto">book your ride easily </string>
    <string name="login">Login</string>
    <string name="create_acc">Don\'t have account ? Create one</string>
    <string name="lgn_email_txt_hint">Email ID</string>
    <string name="lgn_pwd_txt_hint">Password</string>
    <string name="lgn_btn_text">Login</string>
    <string name="forgot_pwd_text">Forget your password ?</string>
    <string name="singup">Sign up</string>
    <string name="repwd">Re Password</string>
    <string name="singup_username">Fullname</string>
    <string name="singup_mobile">Mobile</string>
    <string name="title_activity_home_screen">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Pickup">Pickup Location</string>

    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="pikcup_location">Click for Pickup Location</string>
    <string name="drop_location">Click for Drop Location</string>
    <string name="pickup_date">Select Pickup Date</string>
    <string name="pickup_time">Select pickup Time</string>
    <string name="view_ride">View Ride</string>
    <string name="title_activity_view_ride">View Ride</string>
    <string name="bookdata">Booking List</string>
    <string name="sharerequest">Share Request</string>
    <string name="share_req">Send Request</string>
    <string name="loading">Loding...</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="rateus">Rate us</string>
    <string name="aboutus">About Us</string>
    <string name="rateuse_msg">Type your message here</string>
    <string name="submitrateus">Submit</string>
    <string name="version">Parental Control 1.0.0</string>
    <string name="like">Like us on Facebook</string>
    <string name="Twitter_follow">Follow us on Twitter</string>
    <string name="three">Threee</string>
    <string name="acceptrequest">Resuqest User Detail</string>
    <string name="forgot">Forgot Password</string>
    <string name="frgtnewpwd">New Password</string>
    <string name="frgtnewrepwd">New Re Password</string>
    <string name="forgotpwd">Submit</string>


</resources>
