<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_bookride"
            android:icon="@drawable/nav_book_ride"
            android:title="Book Ride" />

        <item
            android:id="@+id/view_ride"
            android:icon="@drawable/nav_ridehistory"
            android:title="View Ride" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help_feedback"
                android:icon="@drawable/nav_help_feedback"
                android:title="@string/help_feedback" />
            <item
                android:id="@+id/nav_rateus"
                android:icon="@drawable/nav_rateus"
                android:title="@string/rateus" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/nav_aboutus"
                android:title="@string/aboutus" />
        </menu>
    </item>

</menu>
