<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/search_pickup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:drawableLeft="@drawable/pickup_drop"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/Pickup"
        android:text="@string/pikcup_location"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded"
        tools:text="@string/pikcup_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/pickup_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/Pickup"
        android:text="@string/pickup_date"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded"
        tools:text="@string/pickup_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/drop_location" />

    <TextView
        android:id="@+id/drop_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="?attr/editTextBackground"
        android:drawableLeft="@drawable/pickup_drop"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/Pickup"
        android:text="@string/drop_location"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        tools:text="@string/drop_location"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/search_pickup" />

    <Button
        android:id="@+id/search_ride"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/view_ride"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/pickup_date"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

</android.support.constraint.ConstraintLayout>